# azure_sphere_vdisk_mockup

client/: CMakeLists.txt  comms_manager.c  comms_manager.h  main.c  rpa_queue.c  utils.c  utils.h
client/MQTT-C/src/: mqtt_pal.c
server/: disk_server.py
